--- a/QC/Tools/trendConfig/k0s.ini
+++ b/QC/Tools/trendConfig/k0s.ini
@@ -8,15 +8,17 @@ function = gaus(0)+pol2(3)
 ; parameterindex = 1
 parameterindex = 2
 x_range = 1, 1.1
+; x_range = 4, 6
+; x_range = 8, 10
 xrange = 0.35, 0.7
 fit_range = 0.44, 0.56
-fit_opt = QNRV
+fit_opt = QINSWWRFM0
 draw_opt = COLZ
 treding_title = "K^{0}_{S} invariant mass resolution (GeV/#it{c}^{2})"
-initial_parameters = 1, 0.49, 1, 1
+initial_parameters = 1, 0.49, 0.1, 1
 par_range1 = 0.48, 0.51
 par_range2 = 0., 0.2
-show_single_fit = false
+show_single_fit = true
 
 [perf-k0s-resolution/h2_masspT]
 y_range = 0.0, 1.1
