Update QC and downloader

--- a/QC/Tools/trendConfig/k0s.ini
+++ b/QC/Tools/trendConfig/k0s.ini
@@ -22,6 +22,12 @@ show_single_fit = true
 
 [perf-k0s-resolution/h2_masspT]
 y_range = 0.0, 1.1
+
+; [perf-k0s-resolution/K0sResolution/h2_masspT]
+; y_range = 0.0, 5.1
+; x_range = 0.4, 0.6
+
+
 ; [perf-k0s-resolution/h2_masseta]
 ; y_range = -0.8, 0.8
 ; [perf-k0s-resolution/h2_massphi]
