--- a/QC/Tools/trendConfig/tof.ini
+++ b/QC/Tools/trendConfig/tof.ini
@@ -8,4 +8,20 @@ what_to_do = valueat1
 ; [tof-pid-collision-time-qa/eventTimeTOF]
 ; [tof-pid-collision-time-qa/eventTimeT0A]
 ; [tof-pid-collision-time-qa/eventTimeT0C]
-[tof-pid-collision-time-qa/eventTimeT0AC]
+; [tof-pid-collision-time-qa/eventTimeT0AC]
+
+[tof-pid-qa/nsigma/Pi]
+maximum_threshold = None
+minimum_threshold = None
+what_to_do = functionfit
+parameterindex = 1
+projection_range = 0.99, 1.01
+fit_range = -2, 2
+function=gaus
+initial_parameters= 1, 0, 1
+fit_opt=QINSWWRFM0
+show_single_fit=false
+treding_title = "Pi nsigma"
+projection=y
+
+
