--- a/QC/Tools/trendConfig/tof.ini
+++ b/QC/Tools/trendConfig/tof.ini
@@ -20,7 +20,8 @@ fit_range = -2, 2
 function=gaus
 initial_parameters= 1, 0, 1
 fit_opt=QINSWWRFM0
-show_single_fit=false
+show_single_fit=true
+show_single_fit_range = -4, 4
 treding_title = "Pi nsigma"
 projection=y
 
